fixed flex-wraped left/right heights

--- a/styles/Details.module.scss
+++ b/styles/Details.module.scss
@@ -16,7 +16,7 @@
     .details_container_right { height: 60vh; }
 }
 
-    .details_form_container { position: relative; width: 100%; height: 100%; }
+    .details_form_container { position: relative; width: 100%; height: 100%; padding-bottom: 100px; }
 
     .details_title_container { width: 100%; height: 70px; background-color: $primary; display: flex; flex-direction: row; justify-content: center; padding: 0px;
         display: -webkit-box; display: -ms-flexbox; -webkit-box-pack: center; -ms-flex-pack: center; }
